<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fackuayi.afelautoworld.MainActivity">

    <ScrollView
        android:layout_width="373dp"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <!-- <Spinner
                 android:layout_width="368dp"
                 android:layout_height="wrap_content"></Spinner>-->

            <!--Spinner to select Payment Source-->
            <TextView
                android:text="Choose Payment Source"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                />


            <Spinner

                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginBottom="20dp"
                android:id="@+id/selectpayment"
                />


            <!--End of Payment Source Spinner-->

            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:id="@+id/cardPaymentSwitch"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:checked="true"-->
            <!--android:text="@string/accept_card_payments" />-->


            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:text="@string/accept_account_payments"-->
            <!--android:checked="true"-->
            <!--android:id="@+id/accountPaymentSwitch"-->
            <!--/>-->


            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:text="Accept Mpesa payments"-->
            <!--android:checked="true"-->
            <!--android:id="@+id/accountMpesaSwitch"-->
            <!--/>-->

            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:id="@+id/accountGHMobileMoneySwitch"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:checked="true"-->
            <!--android:text="Accept GH Mobile money payments" />-->

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/isLiveSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:text="Live" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/amountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/amount_to_charge_required"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/apiKeyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/api_key"
                android:text=""
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txRefEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/txref_required"
                android:textSize="14sp" />

            <!--<Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_title"/>-->

            <!-- <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:prompt="@string/spinner_title"

                 />-->

            <Spinner
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                />





            <!-- Spinner Element -->
            <!-- <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:prompt="@string/spinner_title"
                 />-->

            <!-- <EditText
                 android:id="@+id/narrationTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:hint="@string/narration"
                 android:textSize="14sp" />-->

            <EditText
                android:id="@+id/currencyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/currency_code_e_g_ghs"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lnameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:textSize="14sp" />

            <Button
                android:id="@+id/startPaymentBtn"
                android:layout_width="wrap_content"
                android:background="@drawable/buttonshape"
                android:textSize="20sp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_payment" />

            <FrameLayout
                android:id="@+id/progressContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#372E4C"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>